@@ -1,0 +1,70 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!-- $Id$ -->
+<!DOCTYPE Configure PUBLIC 
+  "-//Mort Bay Consulting//DTD Configure 1.1//EN"
+  "http://jetty.mortbay.com/configure_1_1.dtd">
+
+<!--
+
+This is the configuration for the Tapestry Intranet site, vlib.primix.com, which
+exists largely to support the Vlib application.
+
+-->
+<Configure class="com.mortbay.HTTP.HttpServer">
+  <Call name="addListener">
+    <Arg>
+      <New class="com.mortbay.HTTP.SocketListener">
+        <Set name="Port">80</Set>
+        <Set name="MinThreads">5</Set>
+        <Set name="MaxThreads">255</Set>
+        <Set name="MaxIdleTimeMs">50000</Set>
+      </New>
+    </Arg>
+  </Call>
+  
+  <Set name="LogSink">
+    <New class="com.mortbay.Util.WriterLogSink">
+      <Set name="Filename">../TapestryLogs/JettyLog.yyyy_mm_dd</Set>
+      <Set name="RetainDays">90</Set>
+      <Set name="Append">true</Set>
+    </New>
+  </Set>
+  
+  <Call name="addWebApplication">
+    <Arg>/tutorial/*</Arg>
+    <Arg>lib/Tutorial.war</Arg>
+    <Arg/>
+  </Call>
+  
+  <Call name="addWebApplication">
+    <Arg>/vlib/*</Arg>
+    <Arg>lib/Vlib.war</Arg>
+    <Arg/>
+  </Call>
+
+ <Call name="addContext">
+    <Arg>/doc/*</Arg>
+    <Set name="ResourceBase">doc</Set>
+    <Set name="ServingResources">TRUE</Set>
+  </Call>
+    
+   <Call name="addContext">
+    <Arg>/</Arg>
+    <Set name="ResourceBase">web</Set>
+    <Set name="ServingResources">TRUE</Set>
+    <Call name="getResourceHandler">
+	<Call name="addIndexFile">
+		<Arg>intranet.html</Arg>
+	</Call>
+    </Call>
+    <Set name="RedirectNullPath">TRUE</Set>
+  </Call>
+
+ <Call name="addContext">
+    <Arg>/private-assets/*</Arg>
+    <Set name="ResourceBase">.build/private-assets</Set>
+    <Set name="ServingResources">TRUE</Set>
+
+  </Call>
+  
+</Configure>
