@@ -1,0 +1,8 @@
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- $Id$ -->
+<head>
+<title>Primix Vlib</title>
+<frameset rows="30,*" border="0" frameborder="no" framespacing="0">
+	<frame src="intranet_nav.html" name="header" scrolling="NO" noresize frameborder="0" framespacing="0" marginheight="0" marginwidth="0">
+	<frame src="/vlib/app" name="body" scrolling="AUTO" frameborder="0" framespacing="0" marginheight="0" marginwidth="0">
+</frameset>
