@@ -1,0 +1,13 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- $Id$ -->
+<html>
+<head>
+	<title>Intranet Navigation</title>
+</head>
+
+<body bgcolor="#cccc99">
+
+Welcome to the Primix Virtual Library.  Pardon the appearance while we fix up the look &amp; feel.
+
+</body>
+</html>
