@@ -1,5 +1,9 @@
 * Jun 18 2001 hship
 
+Put in provisional support for deploying on the Intranet.
+
+* Jun 18 2001 hship
+
 Add a chapter to the developer's guide on the Tapestry Script documents.
 
 * Jun 15 2001 hship
